--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
 
       <link rel="icon" href="Portfolio/favicon.png">
       <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-      <script src="/script.js" defer></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="app.js"></script>
       <title>YeS Travels</title>
     </head>
     <body>
@@ -18,12 +19,49 @@
             <a href = "./index.html" class = "navlinks"><h1 class = "toplogo-1"> Sharon's </h1></a>
             <h3 class = "toplogo-2"> Travel Diaries </h3>
           </div>
-          <div class = "col-7"></div>
+          <div class = "col-8"></div>
           <div class = "col-2 navbar">
-            <a href = "./about.html" class = "navlinks"><h3 class = "nav about"> <span class="underline--magical1">About</span> </h3></a>
+            <a href = "./about.html" class = "navlinks"><h3 class = "nav about"> <span class="underline--magical">About</span> </h3></a>
             <a href = "./locations.html" class = "navlinks"><h3 class = "nav locations"> <span class="underline--magical">Locations</span> </h3></a>
           </div>
-          <div class = "col-1"></div>
+        </div>
+      </div>
+
+
+      <div class = "container-fluid">
+        <div class = "row">
+          <div class = "col-1 timeline-years">
+            <a href="#" id = "2016" class = "years">2016</a><br><br>
+            <a href="#" id = "2017" class = "years">2017</a><br><br>
+            <a href="#" id = "2018" class = "years">2018</a><br><br>
+            <a href="#" id = "2019" class = "years">2019</a><br><br>
+          </div>
+          <div class = "col-1 timeline-places">
+            <div class = "places16 divplaces"
+              <p class = "places"><span class = "placeunderline">China</span></p>
+              <p class = "places"><span class = "placeunderline">Japan</span></p>
+              <p class = "places"><span class = "placeunderline">Los Angeles</span></p>
+            </div>
+            <div class = "places17 divplaces"
+              <p class = "places"><span class = "placeunderline">Iceland</span></p>
+              <p class = "places"><span class = "placeunderline">London</span></p>
+              <p class = "places"><span class = "placeunderline">Czech Republic</span></p>
+              <p class = "places"><span class = "placeunderline">Berlin</span></p>
+              <p class = "places"><span class = "placeunderline">Croatia</span></p>
+            </div>
+            <div class = "places18 divplaces"
+              <p class = "places"><span class = "placeunderline">Cabo</span></p>
+              <p class = "places"><span class = "placeunderline">Hong Kong</span></p>
+              <p class = "places"><span class = "placeunderline">Seoul</span></p>
+              <p class = "places"><span class = "placeunderline">Japan</span></p>
+            </div>
+            <div class = "places19 divplaces"
+              <p class = "places"><span class = "placeunderline">Paris</span></p>
+            </div>
+          </div>
+          <div class = "col-10 ">
+
+          </div>
         </div>
       </div>
     </body>
