--- a/locations.html
+++ b/locations.html
@@ -1,14 +1,15 @@
 <DOCTYPE html>
   <html>
     <head>
-      <link rel="stylesheet" href="locations.css" type="text/css">
+      <link rel="stylesheet" href="style.css" type="text/css">
 
       <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway" rel="stylesheet">
 
 
       <link rel="icon" href="Portfolio/favicon.png">
       <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-      <script src="/script.js" defer></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="app.js"></script>
       <title>YeS Travels</title>
     </head>
     <body>
@@ -18,12 +19,63 @@
             <a href = "./index.html" class = "navlinks"><h1 class = "toplogo-1"> Sharon's </h1></a>
             <h3 class = "toplogo-2"> Travel Diaries </h3>
           </div>
-          <div class = "col-7"></div>
+          <div class = "col-8"></div>
           <div class = "col-2 navbar">
             <a href = "./about.html" class = "navlinks"><h3 class = "nav about"> <span class="underline--magical">About</span> </h3></a>
-            <a href = "./locations.html" class = "navlinks"><h3 class = "nav locations"> <span class="underline--magical1">Locations</span> </h3></a>
+            <a href = "./locations.html" class = "navlinks"><h3 class = "nav locations"> <span class="underline--magical">Locations</span> </h3></a>
           </div>
-          <div class = "col-1"></div>
+        </div>
+      </div>
+
+
+      <div class = "container-fluid">
+        <div class = "row">
+          <div class = "col-1 timeline-years">
+            <a href="#" id = "2016" class = "years">2016</a><br><br>
+            <a href="#" id = "2017" class = "years">2017</a><br><br>
+            <a href="#" id = "2018" class = "years">2018</a><br><br>
+            <a href="#" id = "2019" class = "years">2019</a><br><br>
+          </div>
+          <div class = "col-1 timeline-places">
+            <div class = "places16 divplaces"
+              <p class = "places"><span class = "placeunderline">China</span></p>
+              <p class = "places"><span class = "placeunderline">Japan</span></p>
+              <p class = "places"><span class = "placeunderline">Los Angeles</span></p>
+            </div>
+            <div class = "places17 divplaces"
+              <p class = "places"><span class = "placeunderline">Iceland</span></p>
+              <p class = "places"><span class = "placeunderline">London</span></p>
+              <p class = "places"><span class = "placeunderline">Czech Republic</span></p>
+              <p class = "places"><span class = "placeunderline">Berlin</span></p>
+              <p class = "places"><span class = "placeunderline">Croatia</span></p>
+            </div>
+            <div class = "places18 divplaces"
+              <p class = "places"><span class = "placeunderline">Cabo</span></p>
+              <p class = "places"><span class = "placeunderline">Hong Kong</span></p>
+              <p class = "places"><span class = "placeunderline">Seoul</span></p>
+              <p class = "places"><span class = "placeunderline">Japan</span></p>
+            </div>
+            <div class = "places19 divplaces"
+              <p class = "places"><span class = "placeunderline">Paris</span></p>
+            </div>
+          </div>
+          <div class = "col-10 d-flex align-content-start flex-wrap locationswrap">
+
+            <div class = "placeslist"><h2 class = "countries">Berlin</h2></div>
+            <div class = "placeslist"><h2 class = "countries">Budapest</h2></div>
+            <div class = "placeslist"><h2 class = "countries">Cabo</h2></div>
+            <div class = "placeslist"><h2 class = "countries">Croatia</h2></div>
+            <div class = "placeslist"><h2 class = "countries">Czech Republic</h2></div>
+            <div class = "placeslist"><h2 class = "countries">Hong Kong</h2></div>
+            <div class = "placeslist"><h2 class = "countries">Iceland</h2></div>
+            <div class = "placeslist"><h2 class = "countries">Japan</h2></div>
+            <div class = "placeslist"><h2 class = "countries">Korea</h2></div>
+            <div class = "placeslist"><h2 class = "countries">Krakow</h2></div>
+            <div class = "placeslist"><h2 class = "countries">London</h2></div>
+            <div class = "placeslist"><h2 class = "countries">Paris</h2></div>
+            <div class = "placeslist"><h2 class = "countries">Prague</h2></div>
+            <div class = "placeslist"><h2 class = "countries">Vienna</h2></div>
+          </div>
         </div>
       </div>
     </body>
