--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
       <link rel="stylesheet" href="about.css" type="text/css">
 
       <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 
 
       <link rel="icon" href="Portfolio/favicon.png">
@@ -59,8 +60,52 @@
               <p class = "places"><span class = "placeunderline">Paris</span></p>
             </div>
           </div>
-          <div class = "col-10 ">
-
+          <div class = "col-1"></div>
+          <div class = "col-9 about-square">
+            <div class = "row">
+              <div class = "col-4 firstcol">
+                <h3 class = "hellotext"> Hi! My <br> name is <br> Sharon!</h3>
+                <img class = "aboutpic" src = "aboutpic.png">
+              </div>
+              <div class = "col-4 nogutter">
+                <div id = "art" class = "abtsquares">
+                  <img class = "aboutlogos logo1" src = "art.svg">
+                  <p class = "abouttext text1">Art has always been a huge passion of mine. I’ve been drawing and painting since I was 6 years old, and recently got into design in college!</p>
+                </div>
+                <div id = "school" class = "abtsquares">
+                  <img class = "aboutlogos logo2" src = "school.svg">
+                  <p class = "abouttext text2">I am a 3rd  year undergraduate student at UC Berkeley pursuing a simultaneous degree in Computer Science and Business Administration. Go Bears!!</p>
+                </div>
+                <div id = "bucketlist" class = "abtsquares">
+                  <img class = "aboutlogos logo3" src = "bucket.svg">
+                  <p class = "abouttext text3">The top places on my travel bucketlist right now are: <br>
+                    • Johannesburg (South Africa) <br>
+                    • Bolivia (South America) <br>
+                    • Greece (Balkans) <br>
+                    • Maldives (South Asia)</p>
+                </div>
+              </div>
+              <div class = "col-4 nogutter">
+                <div id = "moving" class = "abtsquares">
+                  <img class = "aboutlogos logo4" src = "house.svg">
+                  <p class = "abouttext text4">I was born in Springfield, Michigan, but moved around to China, California, New Jersey, and Texas before finally coming back to and settling down in California.</p>
+                </div>
+                <div id = "random" class = "abtsquares">
+                  <img class = "aboutlogos logo5" src = "fire.svg">
+                  <p class = "abouttext text5">Random facts about me! <br>
+                    • I used to ice skate, play tennis, and play badminton! <br>
+                    • I worked abroad in Prague, Czech Republic in summer 2017 <br>
+                    • I have a Master Food List where I keep track of all the food/dessert place around the world that I want to try <br>
+                    • I cried the first time I tried the spicy ramen challenge</p>
+                </div>
+                <div id = "socialmedia" class = "abtsquares">
+                  <a href = "https://www.facebook.com/sharon.ye.7" target="_blank"><img class = "socialicons" src = "facebook.svg"></a>
+                  <a href = "https://www.instagram.com/y_sharon_/" target="_blank"><img class = "socialicons" src = "instagram.svg"></a>
+                  <a href = "https://www.linkedin.com/in/sharon-ye/" target="_blank"><img class = "socialicons" src = "linkedin.svg"></a>
+                  <a href = "https://github.com/yesharon" target="_blank"><img class = "socialicons" src = "github.svg"></a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
