--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@
       <div class = "container-fluid">
         <div class = "row">
           <div class = "col-1 timeline-years">
-            <a href="#" id = "2016" class = "years">2016</a><br><br>
-            <a href="#" id = "2017" class = "years">2017</a><br><br>
-            <a href="#" id = "2018" class = "years">2018</a><br><br>
-            <a href="#" id = "2019" class = "years">2019</a><br><br>
+            <p id = "2016" class = "years">2016</p>
+            <p id = "2017" class = "years">2017</p>
+            <p id = "2018" class = "years">2018</p>
+            <p id = "2019" class = "years">2019</p>
           </div>
           <div class = "col-1 timeline-places">
             <div class = "places16 divplaces"
