--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <link rel="stylesheet" href="style.css" type="text/css">
 
       <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway" rel="stylesheet">
-
+      <link href="https://fonts.googleapis.com/css?family=Lustria&display=swap" rel="stylesheet">
 
       <link rel="icon" href="Portfolio/favicon.png">
       <link rel = "stylesheet" href = "https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -24,18 +24,17 @@
             <a href = "./about.html" class = "navlinks"><h3 class = "nav about"> <span class="underline--magical">About</span> </h3></a>
             <a href = "./locations.html" class = "navlinks"><h3 class = "nav locations"> <span class="underline--magical">Locations</span> </h3></a>
           </div>
-          <!-- <div class = "col-1"></div> -->
         </div>
       </div>
 
 
-      <div class = "container-fluid">
-        <div class = "row">
+      <div class = "container-fluid containeradjust">
+        <div class = "row rowadjust">
           <div class = "col-1 timeline-years">
-            <p id = "2016" class = "years">2016</p>
-            <p id = "2017" class = "years">2017</p>
-            <p id = "2018" class = "years">2018</p>
-            <p id = "2019" class = "years">2019</p>
+            <p id = "2016" class = "years"><span class="underline--magical2">2016</span></p>
+            <p id = "2017" class = "years"><span class="underline--magical2">2017</span></p>
+            <p id = "2018" class = "years"><span class="underline--magical2">2018</span></p>
+            <p id = "2019" class = "years"><span class="underline--magical2">2019</span></p>
           </div>
           <div class = "col-1 timeline-places">
             <div class = "places16 divplaces"
@@ -60,12 +59,17 @@
               <p class = "places"><span class = "placeunderline">Paris</span></p>
             </div>
           </div>
-          <div class = "col-10 ">
-            <div class="row"><div class = "col-7 align-self-start imagestart"></div><div class = "col-5"></div></div>
-            <div class="row align-items-center imageslider"></div>
-            <div class="row"><div class = "col-3"></div><div class = "col-9 align-self-end imageend"></div></div>
+          <div class = "col-10 tempbox">
+            <div class = "container">
+              <div class="row topandbottom">
+                <h3 class = "quote">"Not all those who wander are lost."</h3>
+                <h3 class = "author">-J.R.R. Tolkien, Lord of the Rings</h3>
+              </div>
+              <div class="row align-items-center imageslider"></div>
+            </div>
           </div>
         </div>
       </div>
+
     </body>
   </html>
