--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@
       <div class = "container-fluid">
         <div class = "row">
           <div class = "col-1 timeline-years">
-            <p id = "2016" class = "years">2016</p>
-            <p id = "2017" class = "years">2017</p>
-            <p id = "2018" class = "years">2018</p>
-            <p id = "2019" class = "years">2019</p>
+            <p id = "2016" class = "years"><span class="underline--magical2">2016</span></p>
+            <p id = "2017" class = "years"><span class="underline--magical2">2017</span></p>
+            <p id = "2018" class = "years"><span class="underline--magical2">2018</span></p>
+            <p id = "2019" class = "years"><span class="underline--magical2">2019</span></p>
           </div>
           <div class = "col-1 timeline-places">
             <div class = "places16 divplaces"
@@ -62,7 +62,7 @@
           </div>
           <div class = "col-1"></div>
           <div class = "col-9 about-square">
-            <div class = "row">
+            <div class = "row about-row">
               <div class = "col-4 firstcol">
                 <h3 class = "hellotext"> Hi! My <br> name is <br> Sharon!</h3>
                 <img class = "aboutpic" src = "aboutpic.png">
