--- a/about.html
+++ b/about.html
@@ -63,8 +63,8 @@
           <div class = "col-1"></div>
           <div class = "col-9 about-square">
             <div class = "row about-row">
-              <div class = "col-4 firstcol">
-                <h3 class = "hellotext"> Hi! My <br> name is <br> Sharon!</h3>
+              <div class = "col-4 firstcol nogutter">
+                <h3 class = "hellotext"> Hi! My name <br> is Sharon!</h3>
                 <img class = "aboutpic" src = "aboutpic.png">
               </div>
               <div class = "col-4 nogutter">
