--- a/index.html
+++ b/index.html
@@ -37,26 +37,26 @@
             <p id = "2019" class = "years"><span class="underline--magical2">2019</span></p>
           </div>
           <div class = "col-1 timeline-places">
-            <div class = "places16 divplaces"
-              <p class = "places"><span class = "placeunderline">China</span></p>
-              <p class = "places"><span class = "placeunderline">Japan</span></p>
-              <p class = "places"><span class = "placeunderline">Los Angeles</span></p>
+            <div class = "places16 divplaces">
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">China</span></p></a>
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Japan</span></p></a>
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Los Angeles</span></p></a>
             </div>
-            <div class = "places17 divplaces"
-              <p class = "places"><span class = "placeunderline">Iceland</span></p>
-              <p class = "places"><span class = "placeunderline">London</span></p>
-              <p class = "places"><span class = "placeunderline">Czech Republic</span></p>
-              <p class = "places"><span class = "placeunderline">Berlin</span></p>
-              <p class = "places"><span class = "placeunderline">Croatia</span></p>
+            <div class = "places17 divplaces">
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Iceland</span></p></a>
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">London</span></p></a>
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Czech Republic</span></p></a>
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Berlin</span></p></a>
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Croatia</span></p></a>
             </div>
-            <div class = "places18 divplaces"
-              <p class = "places"><span class = "placeunderline">Cabo</span></p>
-              <p class = "places"><span class = "placeunderline">Hong Kong</span></p>
-              <p class = "places"><span class = "placeunderline">Seoul</span></p>
-              <p class = "places"><span class = "placeunderline">Japan</span></p>
+            <div class = "places18 divplaces">
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Cabo</span></p></a>
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Hong Kong</span></p></a>
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Seoul</span></p></a>
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Japan</span></p></a>
             </div>
-            <div class = "places19 divplaces"
-              <p class = "places"><span class = "placeunderline">Paris</span></p>
+            <div class = "places19 divplaces">
+              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Paris</span></p></a>
             </div>
           </div>
           <div class = "col-10 tempbox">
