--- a/tba.html
+++ b/tba.html
@@ -59,22 +59,8 @@
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Paris</span></p></a>
             </div>
           </div>
-          <div class = "col-10 d-flex align-content-start flex-wrap locationswrap">
-
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Berlin</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Budapest</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Cabo</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Croatia</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Czech Republic</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Hong Kong</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Iceland</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Japan</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Korea</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Krakow</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">London</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Paris</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Prague</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Vienna</h2></div></a>
+          <div class = "col-10 d-flex align-content-start flex-wrap">
+            <h3> Page under construction. Please check back later to hear about my adventures here. Thanks for visiting! </h3>
           </div>
         </div>
       </div>
