--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Los Angeles</span></p></a>
             </div>
             <div class = "places17 divplaces">
-              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Iceland</span></p></a>
+              <a href = "./pages/iceland.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Iceland</span></p></a>
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">London</span></p></a>
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Czech Republic</span></p></a>
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Berlin</span></p></a>
@@ -74,7 +74,7 @@
                 </div>
                 <div id = "school" class = "abtsquares">
                   <img class = "aboutlogos logo2" src = "school.svg">
-                  <p class = "abouttext text2">I am a 3rd  year undergraduate student at UC Berkeley pursuing a simultaneous degree in Computer Science and Business Administration. Go Bears!!</p>
+                  <p class = "abouttext text2">I am a 4th year undergraduate student at UC Berkeley pursuing a simultaneous degree in Computer Science and Business Administration. Go Bears!!</p>
                 </div>
                 <div id = "bucketlist" class = "abtsquares">
                   <img class = "aboutlogos logo3" src = "bucket.svg">
@@ -95,7 +95,7 @@
                   <p class = "abouttext text5">Random facts about me! <br>
                     • I used to ice skate, play tennis, and play badminton! <br>
                     • I worked abroad in Prague, Czech Republic in summer 2017 <br>
-                    • I have a Master Food List where I keep track of all the food/dessert place around the world that I want to try <br>
+                    • I have a Master Food List where I keep track of all the food/dessert places around the world that I want to try <br>
                     • I cried the first time I tried the spicy ramen challenge</p>
                 </div>
                 <div id = "socialmedia" class = "abtsquares">
