--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Los Angeles</span></p></a>
             </div>
             <div class = "places17 divplaces">
-              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Iceland</span></p></a>
+              <a href = "./pages/iceland.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Iceland</span></p></a>
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">London</span></p></a>
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Czech Republic</span></p></a>
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Berlin</span></p></a>
