--- a/locations.html
+++ b/locations.html
@@ -43,7 +43,7 @@
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Los Angeles</span></p></a>
             </div>
             <div class = "places17 divplaces">
-              <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Iceland</span></p></a>
+              <a href = "./pages/iceland.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Iceland</span></p></a>
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">London</span></p></a>
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Czech Republic</span></p></a>
               <a href = "./tba.html" class = "placelinks"><p class = "places"><span class = "placeunderline">Berlin</span></p></a>
@@ -67,7 +67,7 @@
             <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Croatia</h2></div></a>
             <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Czech Republic</h2></div></a>
             <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Hong Kong</h2></div></a>
-            <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Iceland</h2></div></a>
+            <a href = "./pages/iceland.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Iceland</h2></div></a>
             <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Japan</h2></div></a>
             <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Korea</h2></div></a>
             <a href = "./tba.html" class = "placelinks"><div class = "placeslist"><h2 class = "countries">Krakow</h2></div></a>
